--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,7 @@
 [server]
 AppMode = debug
 HttpPort = :3000
+JwtKey = 89js82js72
 [database]
 Db = MYSQL
 DbHost = localhost
@@ -8,3 +9,10 @@ DbPort = 3306
 DbUser = root
 DbPassWord = root
 DbName = ginblog1
+
+[qiniu]
+Zone = 1 # 1:华东/华东-浙江;2:华北;3:华南,不填默认华北。境外服务器特殊使用环境自行配置
+AccessKey =
+SecretKey =
+Bucket =
+QiniuSever =
