--- a/config/config.ini
+++ b/config/config.ini
@@ -11,8 +11,8 @@ DbPassWord = root
 DbName = ginblog1
 
 [qiniu]
-Zone = 1 # 1:华东/华东-浙江;2:华北;3:华南,不填默认华北。境外服务器特殊使用环境自行配置
-AccessKey =
-SecretKey =
-Bucket =
-QiniuSever =
+Zone = 2 # 1:华东/华东-浙江;2:华北;3:华南,不填默认华北。境外服务器特殊使用环境自行配置
+AccessKey = 0kd-5BkHdZrkDxqTYL5mn8OiLJ7Hv0w0A5-PoIJs
+SecretKey = RZ54493pgYLT3ik-f1BQzw0vhL19qOc38QxVjoIa
+Bucket = nuchzjtest
+QiniuSever = rwx0ysptv.hb-bkt.clouddn.com
